cmake_minimum_required(VERSION 3.11)
project(InrtusiveListDemo VERSION 1.0.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
set(CMAKE_BUILD_TYPE Debug)
add_subdirectory(libIntrusiveList)
add_executable(main main.c)
target_link_libraries(main InrtusiveList)